fix overflow-y fancybox bug

--- a/_scss/modules/header.scss
+++ b/_scss/modules/header.scss
@@ -112,7 +112,7 @@
             // position: absolute;
             float: right;
             right: 10px;
-            margin-right: 10px;
+            margin-right: 20px;
             font-size:30px;
             color:$white;
             z-index: 1000;
